examples/test/testpolicy16474.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16474
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key23: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value10
      podSelector:
        matchLabels:
          key13: value36
          key42: value33
          key14: value39
